# bernet.23.icdar

./: .gitignore  README.md  lsd_path_dataset.py  requirements.txt
benchmark_notebook/: benchmark_run.ipynb  benchmark_score.ipynb  benchmark_utils.py  benchmark_visualize.ipynb
demo/: demo.ipynb  demo_interactive.ipynb  demo_utils.py  naive_determine_angle.ipynb  pylene_remove_line.ipynb
line_detection_evaluation/pixel/coco/: eval_coco.py  poc.ipynb
line_detection_evaluation/pixel/icdar_2011/: evaluate_staff_line.py
line_detection_evaluation/pixel/icdar_2013/: evaluate_staff_line.py
line_detection_evaluation/vector/: README.md
line_detection_evaluation/vector/linelet_modified/: Image_ID_List.csv  compute_distance.py  evaluate_line_segment.py  line_area_intersection.py  poc.ipynb  utils.py
line_detection_evaluation/vector/linelet_python/: compute_distance.py  evaluate_line_segment.py  line_area_intersection.py  main.py  poc.ipynb  utils.py
line_detectors/: CMakeLists.txt  README.md  conanfile.txt
line_detectors/ag3line/: CMakeLists.txt  main.cc
line_detectors/ag3line/src/: BaseLine.h  GeneralFuncs.cpp  GeneralFuncs.h  MAIN.cc  my_utils_main.cpp  my_utils_main.h
line_detectors/cannylines/: CMakeLists.txt  main.cc
line_detectors/cannylines/src/: CannyLine.cpp  CannyLine.h  MetaLine.cpp  MetaLine.h  ori_main.cpp  types.h
line_detectors/edlib/: CMakeLists.txt  main.cc
line_detectors/edlib/src/: EDLines.cpp
line_detectors/elsed/: CMakeLists.txt  main.cc
line_detectors/lsd_1.6/: CMakeLists.txt  main.cc
line_detectors/lsd_1.6/src/: lsd.c
line_detectors/lsd_1.6_m/: CMakeLists.txt  main.cc
line_detectors/lsd_1.6_m/src/: lsd.c  lsd.h  lsd_generation_output.py  main_utils.c  main_utils.h
line_detectors/ocv_hough/: CMakeLists.txt  main.cc
line_detectors/pylene-ours/: CMakeLists.txt  main.cc
sandbox/: pylene_naive_determine_angle.ipynb  pylene_remove_line.ipynb  sandbox.ipynb  sandbox_utils.py
